fixed the position of the quantity widget in the wine-list and improved the style of number inputs on webkit and android browsers (removed the spinners and the gap between appended elements)

--- a/server/assets/css/style.css
+++ b/server/assets/css/style.css
@@ -3,3 +3,11 @@
 
 .right { text-align: right !important; }
 .input-micro { width: 30px !important; }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	/* display: none; <- Crashes Chrome on hover */
+	-webkit-appearance: none;
+	margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
